--- a/appinfo.json
+++ b/appinfo.json
@@ -1,7 +1,7 @@
 {
   "uuid": "9f1e3aed-98f8-41ec-9bff-2c15fa4f3c24",
-  "shortName": "PbFaces",
-  "longName": "Pebble Faces",
+  "shortName": "pbVideo",
+  "longName": "Pebble Video",
   "companyName": "MakeAwesomeHappen",
   "versionCode": 3,
   "versionLabel": "1.2",
